spacings fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ nav{
     font-weight: 400;
 }
 .secondary-paragraph{
-    margin: 20px 0 0;
+    margin: 20px 0 50px;
 }
 
 .choose-points{
@@ -173,6 +173,11 @@ nav{
 }
 .news-headlines{
     flex-direction: column;
+}
+.latest-articles h1{
+    font-size: 2.15em;
+    font-weight: 400;
+    margin-bottom: 30px;
 }
 
 .news{
@@ -240,7 +245,7 @@ footer{
     
     
     .why-choose{
-        padding: 70px 100px 50px;
+        padding: 70px 100px;
         text-align: left;
     }
     .choose-points{
@@ -250,6 +255,9 @@ footer{
         max-width: 800px;
         gap: 20px;
         padding: 30px 0 10px;
+    }
+    .secondary-paragraph{
+        width: 60%;
     }
     .points{
         max-width: 300px;
@@ -296,25 +304,25 @@ footer{
     }
 
     .illustration{
-        background: url(../images/bg-intro-desktop.svg) 110% -50px no-repeat;
+        background: url(../images/bg-intro-desktop.svg) 120% -50px no-repeat;
         background-size: contain;
-        padding: 0 100px 60px;
+        padding: 0 0 60px 100px;
         flex-direction: row;
         align-items: center;
-        height: 420px;  
+        height: 520px;  
     }
     .ill-img{
         position: relative;
         z-index: 0;
-        margin-top: -115px;
+        margin: -115px 0 0 100px;
     }
     .ill-img img{
-        min-width: 350px;
-        max-width: 600px;
+        min-width: 450px;
+        max-width: 800px;
     }
     .ill-contents{
         text-align: left;
-        max-width: 600px;
+        max-width: 500px;
     }
     
 
@@ -341,6 +349,9 @@ footer{
         padding: 40px 80px;
     }
 
+    .logo-icons img[alt='Easybank']{
+        margin-bottom: 60px;
+    }
     .footer-li{
         display: flex;
         flex-direction: column;
@@ -356,7 +367,7 @@ footer{
         brightness(100%) contrast(70%);
     }
     .btn-copyright{
-        text-align: left;
+        text-align: right;
     }
     .btn-copyright p{
         font-size: .85em;
